// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`wrapWorkerWithSentry > DSN handling > uses the provided DSN 1`] = `
"import * as Sentry from "@sentry/cloudflare";
export default Sentry.withSentry(env => ({
  dsn: "https://d7a9abbecd95ed7d0f5b6c965f5fb6ba@o447951.ingest.us.sentry.io/4510147615391744"
}), {
  async fetch(request, env, ctx): Promise<Response> {
    return new Response('Hello');
  }
});"
`;

exports[`wrapWorkerWithSentry > basic wrapping > preserves complex handler logic 1`] = `
"import * as Sentry from "@sentry/cloudflare";
export default Sentry.withSentry(env => ({
  dsn: "my-dsn"
}), {
  async fetch(request, env, ctx): Promise<Response> {
    const url = new URL(request.url);
    switch (url.pathname) {
      case '/message':
        return new Response('Hello, World!');
      case '/random':
        return new Response(crypto.randomUUID());
      default:
        return new Response('Not Found', { status: 404 });
    }
  },
} satisfies ExportedHandler<Env>);"
`;

exports[`wrapWorkerWithSentry > basic wrapping > wraps a simple worker export with Sentry 1`] = `
"import * as Sentry from "@sentry/cloudflare";
export default Sentry.withSentry(env => ({
  dsn: "my-test-dsn"
}), {
  async fetch(request, env, ctx): Promise<Response> {
    return new Response('Hello World!');
  },
} satisfies ExportedHandler<Env>);"
`;

exports[`wrapWorkerWithSentry > edge cases > handles files with no default export gracefully 1`] = `
"import * as Sentry from "@sentry/cloudflare";
const helper = () => 'test';
export { helper };"
`;

exports[`wrapWorkerWithSentry > edge cases > handles worker without satisfies clause 1`] = `
"import * as Sentry from "@sentry/cloudflare";
export default Sentry.withSentry(env => ({
  dsn: "my-dsn"
}), {
  async fetch(request, env, ctx): Promise<Response> {
    return new Response('Hello');
  }
});"
`;

exports[`wrapWorkerWithSentry > import handling > adds Sentry import at the beginning of the file 1`] = `
"import * as Sentry from "@sentry/cloudflare";
// Worker comment
export default Sentry.withSentry(env => ({
  dsn: "my-dsn"
}), {
  async fetch(request, env, ctx): Promise<Response> {
    return new Response('Test');
  }
});"
`;

exports[`wrapWorkerWithSentry > import handling > preserves an external default export 1`] = `
"import * as Sentry from "@sentry/cloudflare";
import myWorker from './simple';

export default Sentry.withSentry(env => ({
  dsn: "my-dsn"
}), myWorker);"
`;

exports[`wrapWorkerWithSentry > import handling > preserves existing imports 1`] = `
"import * as Sentry from "@sentry/cloudflare";
import { someHelper } from './helpers';

export default Sentry.withSentry(env => ({
  dsn: "my-dsn"
}), {
  async fetch(request, env, ctx): Promise<Response> {
    return new Response(someHelper());
  }
});"
`;

exports[`wrapWorkerWithSentry > logs > includes both tracesSampleRate and enableLogs when both are enabled 1`] = `
"import * as Sentry from "@sentry/cloudflare";
export default Sentry.withSentry(env => ({
  dsn: "my-dsn",

  // Define how likely traces are sampled. Adjust this value in production, or use tracesSampler for greater control.
  tracesSampleRate: 1,

  // Enable logs to be sent to Sentry
  enableLogs: true
}), {
  async fetch(request, env, ctx): Promise<Response> {
    return new Response('Hello');
  }
});"
`;

exports[`wrapWorkerWithSentry > logs > includes enableLogs when logs is enabled 1`] = `
"import * as Sentry from "@sentry/cloudflare";
export default Sentry.withSentry(env => ({
  dsn: "my-dsn",

  // Enable logs to be sent to Sentry
  enableLogs: true
}), {
  async fetch(request, env, ctx): Promise<Response> {
    return new Response('Hello');
  }
});"
`;

exports[`wrapWorkerWithSentry > performance monitoring > includes tracesSampleRate when performance is enabled 1`] = `
"import * as Sentry from "@sentry/cloudflare";
export default Sentry.withSentry(env => ({
  dsn: "my-dsn",

  // Define how likely traces are sampled. Adjust this value in production, or use tracesSampler for greater control.
  tracesSampleRate: 1
}), {
  async fetch(request, env, ctx): Promise<Response> {
    return new Response('Hello');
  }
});"
`;

exports[`wrapWorkerWithSentry > performance monitoring > omits tracesSampleRate when performance is disabled 1`] = `
"import * as Sentry from "@sentry/cloudflare";
export default Sentry.withSentry(env => ({
  dsn: "my-dsn"
}), {
  async fetch(request, env, ctx): Promise<Response> {
    return new Response('Hello');
  }
});"
`;
